--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -21,6 +21,7 @@
     "kill": "킬",
     "avg-kill": "평균킬",
     "name":"이름", 
+    "캐릭터/티어":"캐릭터 / 티어", 
     "지도 도감":"지도 도감",
     "루트제작":"루트 제작",
     "드랍 아이템":"드랍 아이템",
@@ -33,9 +34,44 @@
     "우선 장비":"우선 장비",
     "filter1":"장비 선택",
     "filter2":"지역 선택",
+    "탑3":"탑3",
+    "게임":"게임",
+    "게임수":"게임수",
+    "승":"승",
+    "상위":"상위",
+    "딜량":"딜량",
+    "킬어시":"킬어시",
+    "플레이어":"플레이어",
+    "아이템빌드":"아이템 빌드",
+    "팀원":"팀원",
+    "전":"전",
+    "스킬빌드":"스킬 빌드",
+    "죽인플레이어":"죽인 플레이어",
+    "전적갱신":"전적갱신",
+    "최근 업데이트":"최근 업데이트",
+    "최다킬":"최다킬",
+    "캐락터":"캐릭터",
+    "매치정보":"매치 정보",
+    "랭크":"랭크",
+    "일반":"일반",
+    "추천":"추천",
+    "빌드":"빌드",
+    "더 보기":"더 보기",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, 평균킬수, 평균순위 등을 바탕으로 만들어집니다. 듀오와 스쿼드 통계에서는 평균킬수와 평균순위의 티어에 미치는 영향력이 감소합니다.",
     "question_item":"방어구 아이템 통계는 자료부족으로 인해 전 캐릭터 기준 승률 자료입니다. 각 캐릭터별 방어구 승률이 아닙니다.",
+    "더헌터":{
+        "name": "더헌터",
+        "Detail": "야생동물 50마리 이상 사냥! 북극곰은 살려두세요..."
+    },
+    "부쉬그라운드":{
+        "name": "부쉬그라운드",
+        "Detail": "단 1킬으로 우승! 살아남는자가 강한 것이다."
+    },
+    "루미아트럭":{
+        "name": "루미아트럭",
+        "Detail": "이번 게임 5킬 이상 기록! 당신은 루미아섬 최고의 트럭기사입니다."
+    },
 
     "main": {
         "banner": {
@@ -44,7 +80,9 @@
                 "rank": "랭크",
                 "item": "아이템",
                 "map": "맵",
-                "route": "루트"
+                "route": "루트",
+                "tier": "캐릭터 / 티어"
+
             },
             "placeholder": "캐릭터를 검색하세요."
         },
@@ -72,7 +110,7 @@
         "skill_info": "스킬 정보",
         "passive": "패시브",
         "weaponSkill": "무기스킬",
-        "스킬트리" : "스킬트리",
+        "스킬트리" : "추천 스킬트리",
         "평타" : "평타",
         "흡혈" : "흡혈",
         "스킬" : "스킬"
@@ -181,6 +219,37 @@
         "Chapel": "성당",
         "Factory": "공장",
         "Dock": "항구",
+
+        "badge": {
+            "승1":"25승 달성!",
+            "승2":"50승 달성!",
+            "승3":"100승 달성!",
+            "승4":"250승 달성!",
+            "승5":"500승 달성!",
+            "승6":"1000승 달성!",
+            "승7":"2000승 달성!",
+            "킬1":"25킬 달성!",
+            "킬2":"50킬 달성!",
+            "킬3":"100킬 달성!",
+            "킬4":"250킬 달성!",
+            "킬5":"500킬 달성!",
+            "킬6":"1000킬 달성!",
+            "킬7":"2000킬 달성!",
+            "탑1":"75포디움 달성!",
+            "탑2":"150포디움 달성!",
+            "탑3":"300포디움 달성!",
+            "탑4":"750포디움 달성!",
+            "탑5":"1500포디움 달성!",
+            "탑6":"3000포디움 달성!",
+            "탑7":"6000포디움 달성!",
+            "판1":"200판 달성!",
+            "판2":"400판 달성!",
+            "판3":"800판 달성!",
+            "판4":"2000판 달성!",
+            "판5":"4000판 달성!",
+            "판6":"8000판 달성!",
+            "판7":"16000판 달성!"
+        },
 
     "items":{
         "일렉트론블라스터": "일렉트론 블라스터",
@@ -488,7 +557,9 @@
         "저격스코프": "저격스코프",
         "진신사리": "진신사리",
         "화살통": "화살통",
-        "생명의가루": "생명의가루"
+        "생명의가루": "생명의가루",
+        "비파단도": "비파단도",
+        "월왕구천": "월왕구천"
     },
     "skill": {
         "아야": {
@@ -885,6 +956,28 @@
             "R": {
                 "name": "기동전",
                 "Detail": "실비아가 바이크에 탑승하여 이동속도가 증가하며, 연료를 소모합니다.\n연료가 30보다 적으면 스킬을 사용할 수 없습니다.\n바이크폼: 실비아가 바이크에서 내려 인간 폼으로 돌아옵니다."
+            }
+        },
+        "엠마": {
+            "T": {
+                "name": "CheerUP♥",
+                "Detail": "엠마의 다음 기본 공격이 추가 피해를 주고,\n 90/120/150(+최대 스태미나의 3/6/8%)만큼의 방어막을 얻습니다."
+            },
+            "Q": {
+                "name": "비둘기 딜러",
+                "Detail": "엠마가 지정한 방향으로 카드를 날려 적에게 피해를 입히는 비둘기를 소환합니다.\n 이미 소환한 비둘기도 지정한 방향으로 돌진해 동일한 피해를 입히고 사라집니다.\n 소환된 비둘기는 10초동안 유지됩니다."
+            },
+            "W": {
+                "name": "폭죽 모자",
+                "Detail": "엠마가 날린 모자가 잠시 후 폭발하여 범위 안의 적에게 피해를 입힙니다.\n 적에게 피해를 입히면 쿨다운이 3초 감소합니다."
+            },
+            "E": {
+                "name": "마술 토끼",
+                "Detail": "지속 효과 : 엠마가 스태미너를 소모하면 그 일부를 체력으로 회복합니다.\n 엠마가 지정한 대상에게 마술빔을 쏘아 토끼로 변하게 합니다.\n 토끼 상태의 실험체는 이동을 제외한 행동이 제한되고, 이동속도가 감소합니다."
+            },
+            "R": {
+                "name": "Change★",
+                "Detail": "엠마가 비둘기, 모자, 토끼를 대상으로 순간이동하여 추가 효과를 줍니다.\n 비둘기 : 비둘기가 엠마의 기존 위치로 이동하여 경로상의 적에게 150/200/250(+0.45 공격력)의 피해를 주고 1.5초간 속박합니다.\n 모자 : 모자가 엠마와 자리를 바꾸며 범위 안의 적에게 200/250/300(+0.75 공격력)의 피해를 입히고 모자의 중심으로 끌어당깁니다.\n 토끼 : 토끼 주변의 적들을 1초간 토끼로 바꿉니다."
             }
         },
 
