match 거의 완료 detail 거의 완료

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -9,17 +9,17 @@
     "weapon": "Weapon",
     "ranking": "Rank",
     "rank": "Rank",
-    "avg-rank": "Avg-rank",
+    "avgRank": "avgRank",
     "item": "Item",
     "solo": "SOLO",
     "duo": "DUO",
     "squad": "SQUAD",
     "tier": "Tier",
     "total": "Tier",
-    "win-rate": "Win-rate",
-    "pick-rate": "Pick-rate",
+    "winRate": "winRate",
+    "pickRate": "pickRate",
     "kill": "Kill",
-    "avg-kill": "Avg-kill",
+    "avgKAM": "avgKAM",
     "name":"Name",
     "캐릭터/티어":"Cha.. / Tier", 
     "지도 도감":"Map Catalog",
