--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -9,17 +9,17 @@
     "weapon": "무기",
     "ranking": "랭킹",
     "rank": "순위",
-    "avg-rank": "평균순위",
+    "avgRank": "평균순위",
     "item": "아이템",
     "solo": "솔로",
     "duo": "듀오",
     "squad": "스쿼드",
     "tier": "티어",
     "total": "티어",
-    "win-rate": "승률",
-    "pick-rate": "픽률",
+    "winRate": "승률",
+    "pickRate": "픽률",
     "kill": "킬",
-    "avg-kill": "평균킬",
+    "avgKAM": "평균킬",
     "name":"이름", 
     "캐릭터/티어":"캐릭터 / 티어", 
     "지도 도감":"지도 도감",
