--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -9,17 +9,17 @@
     "weapon": "武器",
     "ranking": "排名",
     "rank": "排名",
-    "avg-rank": "平均-排名",
+    "avgRank": "平均-排名",
     "item": "物品",
     "solo": "ソロ",
     "duo": "デュオ",
     "squad": "スクワッド",
     "tier": "ティア",
     "total": "ティア",
-    "win-rate": "胜率",
-    "pick-rate": "ピック率",
+    "winRate": "胜率",
+    "pickRate": "ピック率",
     "kill": "キル",
-    "avg-kill": "平均-キル",
+    "avgKAM": "平均-キル",
     "name":"名字",
     "캐릭터/티어":"性格 / ティア", 
     "지도 도감":"地図図鑑",
