--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -9,17 +9,17 @@
     "weapon": "武器",
     "ranking": "排名",
     "rank": "排名",
-    "avg-rank": "平均-排名",
+    "avgRank": "平均-排名",
     "item": "物品",
     "solo": "单人",
     "duo": "二人",
     "squad": "三人",
     "tier": "层级",
     "total": "层级",
-    "win-rate": "胜率",
-    "pick-rate": "登场率",
+    "winRate": "胜率",
+    "pickRate": "登场率",
     "kill": "击杀",
-    "avg-kill": "平均-击杀",
+    "avgKAM": "平均-击杀",
     "name":"名字",
     "캐릭터/티어":"性格 / 层级", 
     "지도 도감":"地图鉴别",
