--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -19,7 +19,7 @@
     "winRate": "胜率",
     "pickRate": "ピック率",
     "kill": "キル",
-    "avgKAM": "平均-キル",
+    "avgKAM": "KA/M",
     "name":"名字",
     "캐릭터/티어":"性格 / ティア", 
     "지도 도감":"地図図鑑",
@@ -47,19 +47,23 @@
     "전":"戦",
     "스킬빌드":"スキルツリー",
     "죽인플레이어":"死人",
-    "전적갱신":"データを更新す",
+    "전적갱신":"更新",
     "최근 업데이트":"最近の更新",
     "최다킬":"最多キル",
-    "캐락터":"性格",
+    "캐릭터":"性格",
     "매치정보":"マッチ情報",
     "랭크":"ランク",
-    "일반":"ノーマル",
-    "추천":"推薦",
+    "일반":"ノマル",
+    "추천아이템":"推薦 物品",
     "빌드":"ツリー",
     "더 보기":"もっと見る",
+    "레벨":"レベル",
+    "위":"位",
+    "전체":"全体",
+    "종합":"종합",
+    "킬어시 / 딜량":"ダメージ量",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
-    "question":"キャラクターティアは、公式統計を基にしたキャラクターの勝率、ピック率、平均キル数、平均順位などを基に作られます。 デュオとスクワッドの統計では、平均キール数と平均順位のティアへの影響力が減少します。",
-    "question_item":"防具アイテムの統計は、資料不足により全キャラクター基準勝率資料です。 各キャラクター別の防御球の勝率ではありません。",
+    "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
     "더헌터":{
         "name": "ザ·ハンター",
         "Detail": "野生動物50匹以上狩り！ ホッキョクグマは殺さないでください。"
@@ -80,7 +84,8 @@
                 "rank": "排名",
                 "item": "物品",
                 "map": "地圖",
-                "route": "ルート"
+                "route": "ルート",
+                "tier": "性格 / ティア"
             },
             "placeholder": "キャラクター検索."
         },
@@ -106,10 +111,12 @@
         "skill_info": "スキル情報",
         "passive": "受動的",
         "weaponSkill": "武器スキル",
-        "스킬트리" : "スキルツリー",
+        "스킬트리" : "推薦 スキルツリー",
         "평타" : "基本攻撃",
         "흡혈" : "体力力吸収",
-        "스킬" : "スキル増幅"
+        "스킬" : "スキル増幅",
+        "lv1stat": "LV1 能力値",
+        "lv20stat": "LV20 能力値"
     },
     "stat": {
         "공격력": "攻撃力",
@@ -166,7 +173,8 @@
         "키아라": "キアラ",
         "아드리아나": "アドリアナ",
         "쇼이치": "彰一",
-        "실비아": "シルヴィア"
+        "실비아": "シルヴィア",
+        "엠마": "エマ"
     },
     "weapons": {
         "투척": "投げ", 
