--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -19,7 +19,7 @@
     "winRate": "승률",
     "pickRate": "픽률",
     "kill": "킬",
-    "avgKAM": "평균킬",
+    "avgKAM": "KA/M",
     "name":"이름", 
     "캐릭터/티어":"캐릭터 / 티어", 
     "지도 도감":"지도 도감",
@@ -50,17 +50,21 @@
     "전적갱신":"전적갱신",
     "최근 업데이트":"최근 업데이트",
     "최다킬":"최다킬",
-    "캐락터":"캐릭터",
+    "캐릭터":"캐릭터",
     "매치정보":"매치 정보",
     "전체":"전체",
     "랭크":"랭크",
     "일반":"일반",
-    "추천":"추천",
+    "추천아이템":"추천 아이템",
     "빌드":"빌드",
     "더 보기":"더 보기",
+    "레벨":"레벨",
+    "위":"위",
+    "전체":"전체",
+    "종합":"종합",
+    "킬어시 / 딜량":"킬어시 / 딜량",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
-    "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, 평균킬수, 평균순위 등을 바탕으로 만들어집니다. 듀오와 스쿼드 통계에서는 평균킬수와 평균순위의 티어에 미치는 영향력이 감소합니다.",
-    "question_item":"방어구 아이템 통계는 자료부족으로 인해 전 캐릭터 기준 승률 자료입니다. 각 캐릭터별 방어구 승률이 아닙니다.",
+    "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, KA/M, 평균순위 등을 바탕으로 만들어집니다.",
     "더헌터":{
         "name": "더헌터",
         "Detail": "야생동물 50마리 이상 사냥! 북극곰은 살려두세요..."
@@ -172,7 +176,8 @@
         "키아라": "키아라",
         "아드리아나": "아드리아나",
         "쇼이치": "쇼이치",
-        "실비아": "실비아"
+        "실비아": "실비아",
+        "엠마": "엠마"
     },
     "weapons": {
         "투척": "투척", 
