--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -19,7 +19,7 @@
     "winRate": "胜率",
     "pickRate": "登场率",
     "kill": "击杀",
-    "avgKAM": "平均-击杀",
+    "avgKAM": "KA/M",
     "name":"名字",
     "캐릭터/티어":"性格 / 层级", 
     "지도 도감":"地图鉴别",
@@ -50,16 +50,20 @@
     "전적갱신":"更新",
     "최근 업데이트":"最近更新",
     "최다킬":"最多击杀",
-    "캐락터":"性格",
+    "캐릭터":"性格",
     "매치정보":"棋局情报",
     "랭크":"排位",
     "일반":"一般",
-    "추천":"推荐",
+    "추천아이템":"推荐 物品",
     "빌드":"次序",
     "더 보기":"查看更多",
+    "레벨":"等级",
+    "위":"位",
+    "전체":"全体",
+    "종합":"종합",
+    "킬어시 / 딜량":"伤害",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
-    "question":"字符层是根据官方统计的获胜率,选择率,平均技能,平均等级等来计算的。 多重和班级的统计数字减少 了普通杀戮和普通等级的影响。",
-    "question_item":"装甲项目统计数据是由于缺少 数据而基于所有角色的获胜率数据。不是每个角色的装甲赢率。",
+    "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
     "더헌터":{
         "name": "猎人",
         "Detail": "猎取野生动物50只以上！ 救救北极熊吧..."
@@ -80,7 +84,8 @@
                 "rank": "排名",
                 "item": "物品",
                 "map": "地图",
-                "route": "路径"
+                "route": "路径",
+                "tier": "性格 / 层级"
             },
             "placeholder": "角色搜索."
         },
@@ -106,10 +111,12 @@
         "skill_info": "技能资讯",
         "passive": "被动的",
         "weaponSkill": "武器技能",
-        "스킬트리" : "技能次序",
+        "스킬트리" : "推荐 技能次序",
         "평타" : "基本攻击",
         "흡혈" : "体能吸收",
-        "스킬" : "技能增幅"
+        "스킬" : "技能增幅",
+        "lv1stat": "LV1 能力值",
+        "lv20stat": "LV20 能力值"
     },
     "stat": {
         "공격력": "攻击力",
@@ -166,7 +173,8 @@
         "키아라": "奇娅拉",
         "아드리아나": "阿德瑞娜",
         "쇼이치": "彰一",
-        "실비아": "西尔维娅"
+        "실비아": "西尔维娅",
+        "엠마": "艾玛"
     },
     "weapons": {
         "투척": "投掷", 
