--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -16,10 +16,10 @@
     "squad": "SQUAD",
     "tier": "Tier",
     "total": "Tier",
-    "winRate": "winRate",
-    "pickRate": "pickRate",
+    "winRate": "WinRate",
+    "pickRate": "PickRate",
     "kill": "Kill",
-    "avgKAM": "avgKAM",
+    "avgKAM": "KA/M",
     "name":"Name",
     "캐릭터/티어":"Cha.. / Tier", 
     "지도 도감":"Map Catalog",
@@ -50,16 +50,20 @@
     "전적갱신":"Update",
     "최근 업데이트":"Last updated",
     "최다킬":"Most Kills",
-    "캐락터":"Character",
+    "캐릭터":"Character",
     "매치정보":"Match Info",
-    "랭크":"Rank",
-    "일반":"Noraml",
-    "추천":"Recommended",
+    "랭크":"RANK",
+    "일반":"NORMAL",
+    "추천아이템":"Recommended Item",
     "빌드":"Build",
     "더 보기":"more",
+    "레벨":"LV",
+    "위":"th",
+    "전체":"ALL",
+    "종합":"ALL",
+    "킬어시 / 딜량":"KA / DMG",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\n Eternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\n Data Based on Nimble Neuron",
-    "question":"The character tier is based on the winning rate, pick rate, average skill, and average rank of characters based on official statistics. Duo and squad statistics reduce the influence on average kill and tier of average rank.",
-    "question_item":"Armor item statistics are data on the win rate based on all characters due to lack of data. It is not the armor win rate for each character.",
+    "question":"Character tier is made based on the winning rate, pick rate, KA/M, and average ranking of characters based on official statistics.",
     "TheHunter":{
         "name": "TheHunter",
         "Detail": "Hunt more than 50 wild animals! Don't kill polar bears..."
@@ -80,7 +84,8 @@
                 "rank": "Rank",
                 "item": "Item",
                 "map": "Map",
-                "route": "Route"
+                "route": "Route",
+                "tier": "Cha / Tier"
             },
             "placeholder": "Search character."
         },
@@ -108,7 +113,7 @@
         "skill_info": "Skill Info",
         "passive": "Passive",
         "weaponSkill": "Weapon Skill",
-        "스킬트리" : "Skill Tree",
+        "스킬트리" : "Recommended Skill Tree",
         "평타" : "Normal Attack",
         "흡혈" : "Life Steal",
         "스킬" : "Skill Amplification"
@@ -168,7 +173,8 @@
         "키아라": "Chiara",
         "아드리아나": "Adriana",
         "쇼이치": "Shoichi",
-        "실비아": "Silvia"
+        "실비아": "Silvia",
+        "엠마": "Emma"
     },
     "weapons": {
         "투척": "Throw", 
