--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -64,6 +64,8 @@
     "킬어시 / 딜량":"KA / DMG",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\n Eternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\n Data Based on Nimble Neuron",
     "question":"Character tier is made based on the winning rate, pick rate, KA/M, and average ranking of characters based on official statistics.",
+    "로딩":"Searching match history. Please wait a moment.",
+    "없음":"No match historical information. Please check your nickname again and search for it.",
     "TheHunter":{
         "name": "TheHunter",
         "Detail": "Hunt more than 50 wild animals! Don't kill polar bears..."
