--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -64,6 +64,8 @@
     "킬어시 / 딜량":"ダメージ量",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
+    "로딩":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
+    "없음":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
     "더헌터":{
         "name": "ザ·ハンター",
         "Detail": "野生動物50匹以上狩り！ ホッキョクグマは殺さないでください。"
