--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -65,6 +65,8 @@
     "킬어시 / 딜량":"킬어시 / 딜량",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, KA/M, 평균순위 등을 바탕으로 만들어집니다.",
+    "로딩":"전적을 검색 중 입니다. 잠시만 기다려 주세요.",
+    "없음":"전적정보가 없습니다. 닉네임을 다시 확인하여 검색해 주세요.",
     "더헌터":{
         "name": "더헌터",
         "Detail": "야생동물 50마리 이상 사냥! 북극곰은 살려두세요..."
