--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -64,6 +64,8 @@
     "킬어시 / 딜량":"伤害",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
+    "로딩":"正在搜索战绩。 请稍等。",
+    "없음":"无户籍信息全无户籍信息。 请重新确认昵称后搜索。",
     "더헌터":{
         "name": "猎人",
         "Detail": "猎取野生动物50只以上！ 救救北极熊吧..."
