css 수정, 번역 추가, 번체 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -1,7 +1,13 @@
 {
     "Title": {
-        "Main": "ブラックサバイバル: 永遠回帰 情報",
-        "Map":"地図図鑑 / 経路制作"
+        "Main": "ブラックサバイバル: 永遠回帰 性格 / ティア",
+        "Map":"地図図鑑 / 経路制作",
+        "newMain": "ブラックサバイバル: 永遠回帰 - 戦績情報",
+        "Detail1":"ブラックサバイバル: 永遠回帰 -",
+        "Detail2":"攻略, スキルツリー, 物品ツリー - 性格 分析",
+        "Match": "ゲーム戦績情報",
+        "Rank": "ブラックサバイバル: 永遠回帰 - 排名",
+        "Rank2": "ブラックサバイバル: 永遠回帰 - 匠人 排名"
     },
     "Data-period": "更新 2020.11.19 / 数据期间 2020.11.17 ~ 11.18",
     "search": "検索",
@@ -60,11 +66,14 @@
     "레벨":"レベル",
     "위":"位",
     "전체":"全体",
-    "종합":"종합",
+    "종합":"綜合",
+    "티어":"ティア",
+    "우승":"優勝",
+    "점수":"点数",
     "킬어시 / 딜량":"ダメージ量",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
-    "로딩":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
+    "로딩":"戦績を検索中です。 少々お待ちください",
     "없음":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
     "더헌터":{
         "name": "ザ·ハンター",
@@ -121,40 +130,36 @@
         "lv20stat": "LV20 能力値"
     },
     "stat": {
-        "공격력": "攻撃力",
-        "스킬증폭": "スキル増幅",
-        "공격속도": "攻撃速度",
-        "생명력흡수": "体力力吸収",
-        "장탄 수": "装弾数",
+        "attackPower": "攻撃力",
+        "increaseSkillDamage": "スキル増幅",
+        "increaseSkillDamageRatio": "スキル増幅(%)",
+        "attackSpeedRatio": "攻撃速度",
+        "lifeSteal": "体力力吸収",
 
-        "치명타확률": "致命打",
-        "치명타피해량": "致命打被害",
+        "criticalStrikeChance": "致命打",
+        "criticalStrikeDamage": "致命打被害",
 
-        "기본공격추가피해": "基本攻撃追加被害",
-        "기본공격시치유감소": "基本攻撃時治癒減少",
-        "스킬적중시치유감소": "スキルを的中させると治癒減少",
+        "increaseBasicAttackDamage": "基本攻撃追加被害",
+        "decreaseRecoveryToBasicAttack": "基本攻撃時治癒減少",
+        "decreaseRecoveryToSkill": "スキルを的中させると治癒減少",
 
-        "방어력": "防御力",
-        "기본공격피해감소": "基本攻撃の被害減少",
-        "스킬피해감소": "スキル被害減少",
+        "defense": "防御力",
+        "preventBasicAttackDamaged": "基本攻撃の被害減少",
+        "preventSkillDamagedRatio": "スキル被害減少",
         
-        "체력": "最大体力",
-        "최대체력": "最大体力",
-        "체력재생": "体力再生",
-        "체력재생2": "体力再生(%)",
+        "maxHp": "最大体力",
+        "hpRegen": "体力再生",
+        "hpRegenRatio":  "体力再生(%)",
 
-        "최대스태미너": "最大スタミナ",
-        "스태미너재생": "スタミナ再生",
-        "스태미너재생2": "スタミナ再生(%)",
-        "스테미너재생": "スタミナ再生",
-        "스테미너재생2": "スタミナ再生(%)",
+        "maxSp": "最大スタミナ",
+        "spRegen": "スタミナ再生",
+        "spRegenRatio": "スタミナ再生(%)",
 
-        "시야": "視界",
-        "이동속도": "移動速度",
-        "쿨다운감소": "クールダウン減少",
-        "기본공격사거리": "基本攻撃の射程距離は",
-        "비전투중이동속도": "非戦闘中の移動速度",
-        "비전투시이동속도": "非戦闘中の移動速度"
+        "sightRange": "視界",
+        "moveSpeed": "移動速度",
+        "cooldownReduction":"クールダウン減少",
+        "attackRange":"基本攻撃の射程距離は",
+        "outOfCombatMoveSpeed": "非戦闘中の移動速度"
     },
 
     "characters": {
@@ -394,7 +399,7 @@
         "집사복": "執事服",
         "카바나": "カバナ",
         "퀸오브하트": "クイーンオブハート",
-        "궁기병의 화살통": "弓騎兵の矢筒",
+        "궁기병의화살통": "弓騎兵の矢筒",
         "달빛펜던트": "月光ペンダント",
         "만년빙": "万年氷",
         "백우선": "白羽扇",
