--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -1,7 +1,13 @@
 {
     "Title": {
-        "Main": "블랙 서바이벌 통계",
-        "Map":"지도 도감 / 루트"
+        "Main": "블랙 서바이벌 - 캐릭터 티어 / 캐릭터 정보",
+        "Map":"블랙 서바이벌 - 지도 도감 / 루트 제작",
+        "newMain": "블랙 서바이벌 - 전적검색",
+        "Detail1":"블랙 서바이벌 -",
+        "Detail2":"공략, 스킬트리, 아이템트리 - 캐릭터 분석",
+        "Match": "게임 전적 정보",
+        "Rank": "블랙 서바이벌 - 랭킹",
+        "Rank2": "블랙 서바이벌 장인랭킹"
     },
     "Data-period": "Updated 2020.11.19 / Data period 2020.11.17 ~ 11.18",
     "search": "검색",
@@ -64,7 +70,6 @@
     "킬어시 / 딜량":"킬어시 / 딜량",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, KA/M, 평균순위 등을 바탕으로 만들어집니다.",
-    "갱신":"전적을 갱신 중 입니다. 잠시만 기다려 주세요.",
     "로딩":"전적을 검색 중 입니다. 잠시만 기다려 주세요.",
     "없음":"전적정보가 없습니다. 닉네임을 다시 확인하여 검색해 주세요.",
     "더헌터":{
@@ -124,40 +129,36 @@
     },
 
     "stat": {
-        "공격력": "공격력",
-        "스킬증폭": "스킬증폭",
-        "공격속도": "공격속도",
-        "생명력흡수": "생명력 흡수",
-        "장탄 수": "장탄수",
+        "attackPower": "공격력",
+        "increaseSkillDamage": "스킬증폭",
+        "increaseSkillDamageRatio": "스킬증폭(%)",
+        "attackSpeedRatio": "공격속도",
+        "lifeSteal": "생명력 흡수",
 
-        "치명타확률": "치명타 확률",
-        "치명타피해량": "치명타 피해량",
+        "criticalStrikeChance": "치명타 확률",
+        "criticalStrikeDamage": "치명타 피해량",
 
-        "기본공격추가피해": "기본공격 추가피해",
-        "기본공격시치유감소": "기본공격시 치유감소",
-        "스킬적중시치유감소": "스킬적중시 치유감소",
+        "increaseBasicAttackDamage": "기본공격 추가피해",
+        "decreaseRecoveryToBasicAttack": "기본공격시 치유감소",
+        "decreaseRecoveryToSkill": "스킬적중시 치유감소",
 
-        "방어력": "방어력",
-        "기본공격피해감소": "기본공격 피해감소",
-        "스킬피해감소": "스킬 피해감소",
+        "defense": "방어력",
+        "preventBasicAttackDamaged": "기본공격 피해감소",
+        "preventSkillDamagedRatio": "스킬 피해감소",
         
-        "체력": "최대 체력",
-        "최대체력": "최대 체력",
-        "체력재생": "체력 재생",
-        "체력재생2": "체력 재생(%)",
+        "maxHp": "최대 체력",
+        "hpRegen": "체력 재생",
+        "hpRegenRatio":  "체력 재생(%)",
 
-        "최대스태미너": "최대 스태미너",
-        "스태미너재생": "스태미너 재생",
-        "스태미너재생2": "스태미너 재생(%)",
-        "스테미너재생": "스태미너 재생",
-        "스테미너재생2": "스태미너 재생(%)",
+        "maxSp": "최대 스태미너",
+        "spRegen": "스태미너 재생",
+        "spRegenRatio": "스태미너 재생(%)",
 
-        "시야": "시야",
-        "이동속도": "이동속도",
-        "쿨다운감소": "쿨다운 감소",
-        "기본공격사거리": "기본공격 사거리",
-        "비전투중이동속도": "비전투시 이동속도",
-        "비전투시이동속도": "비전투시 이동속도"
+        "sightRange": "시야",
+        "moveSpeed": "이동속도",
+        "cooldownReduction":"쿨다운 감소",
+        "attackRange":"기본공격 사거리",
+        "outOfCombatMoveSpeed": "비전투시 이동속도"
     },
 
     "characters": {
@@ -397,7 +398,7 @@
         "집사복": "집사복",
         "카바나": "카바나",
         "퀸오브하트": "퀸 오브 하트",
-        "궁기병의 화살통": "궁기병의 화살통",
+        "궁기병의화살통": "궁기병의화살통",
         "달빛펜던트": "달빛 펜던트",
         "만년빙": "만년빙",
         "백우선": "백우선",
