--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -1,102 +1,102 @@
 {
     "Title": {
-        "Main": "永遠回歸 : 黑色幸存者 性格 / 层级",
-        "Map":"地图鉴别 / 路径制作",
-        "newMain": "永遠回歸 : 黑色幸存者 - 戦績情報",
-        "Detail1":"永遠回歸 : 黑色幸存者 -",
+        "Main": "永遠回歸 : 黑色倖存者 性格 / 層級",
+        "Map":"地圖鑑別 / 路徑製作",
+        "newMain": "永遠回歸 : 黑色倖存者 - 戦績情報",
+        "Detail1":"永遠回歸 : 黑色倖存者 -",
         "Detail2":"攻略, 技能次序, 物品次序 - 性格 分析",
-        "Match": "游戏全知情报",
-        "Rank": "永遠回歸 : 黑色幸存者 - 排名",
-        "Rank2": "永遠回歸 : 黑色幸存者 - 匠人排名"
+        "Match": "遊戲全知情報",
+        "Rank": "永遠回歸 : 黑色倖存者 - 排名",
+        "Rank2": "永遠回歸 : 黑色倖存者 - 匠人排名"
     },
-    "Data-period": "更新 2020.11.19 / 数据期间 2020.11.17 ~ 11.18",
-    "search": "搜索",
-    "character": "性格",
-    "weapon": "武器",
-    "ranking": "排名",
-    "rank": "排名",
-    "avgRank": "平均-排名",
-    "item": "物品",
-    "solo": "单人",
-    "duo": "二人",
-    "squad": "三人",
-    "tier": "层级",
-    "total": "层级",
-    "winRate": "胜率",
-    "pickRate": "登场率",
-    "kill": "击杀",
-    "avgKAM": "KA/M",
-    "name":"名字",
-    "캐릭터/티어":"性格 / 层级", 
-    "지도 도감":"地图鉴别",
-    "루트제작":"路径制作",
-    "드랍 아이템":"物品",
-    "출현 동물":"出现动物",
-    "최종 무기":"最终武器",
-    "시작 무기":"开始武器",
-    "능력치":"能力值",
-    "계산":"计算",
-    "선택":"选择",
-    "우선 장비":"首先物品",
-    "filter1":"物品选择",
-    "filter2":"地区选择",
-    "탑3":"前3名",
-    "게임":"棋局",
-    "게임수":"棋局",
-    "승":"胜",
-    "상위":"上位",
-    "딜량":"伤害",
-    "킬어시":"击杀帮助",
-    "플레이어":"玩家",
-    "아이템빌드":"物品次序",
-    "팀원":"组员",
-    "전":"战",
-    "스킬빌드":"技能次序",
-    "죽인플레이어":"死因",
-    "전적갱신":"更新",
-    "최근 업데이트":"最近更新",
-    "최다킬":"最多击杀",
-    "캐릭터":"性格",
-    "매치정보":"棋局情报",
-    "랭크":"排位",
-    "일반":"一般",
-    "추천아이템":"推荐 物品",
-    "빌드":"次序",
-    "더 보기":"查看更多",
-    "레벨":"等级",
-    "위":"位",
-    "전체":"全体",
-    "종합":"综合",
-    "티어":"档次",
-    "우승":"优胜",
-    "점수":"点数",
-    "킬어시 / 딜량":"伤害",
-    "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
-    "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
-    "로딩":"正在搜索战绩。 请稍等。",
-    "없음":"无户籍信息全无户籍信息。 请重新确认昵称后搜索。",
-    "더헌터":{
-        "name": "猎人",
-        "Detail": "猎取野生动物50只以上！ 救救北极熊吧..."
-    },
-    "부쉬그라운드":{
-        "name": "灌木丛绝地 ",
-        "Detail": "仅以1杀获胜！ 生存者是最强的。"
-    },
-    "루미아트럭":{
-        "name": "货车司机",
-        "Detail": "这次比赛5杀以上记录！ 你是鲁密岛最好的卡车司机。"
-    },
+        "Data-period": "更新 2020.11.19 / 數據期間 2020.11.17 ~ 11.18",
+        "search": "搜索",
+        "character": "性格",
+        "weapon": "武器",
+        "ranking": "排名",
+        "rank": "排名",
+        "avgRank": "平均-排名",
+        "item": "物品",
+        "solo": "單人",
+        "duo": "二人",
+        "squad": "三人",
+        "tier": "層級",
+        "total": "層級",
+        "winRate": "勝率",
+        "pickRate": "登場率",
+        "kill": "擊殺",
+        "avgKAM": "KA/M",
+        "name":"名字",
+        "캐릭터/티어":"性格 / 層級",
+        "지도 도감":"地圖鑑別",
+        "루트제작":"路徑製作",
+        "드랍 아이템":"物品",
+        "출현 동물":"出現動物",
+        "최종 무기":"最終武器",
+        "시작 무기":"開始武器",
+        "능력치":"能力值",
+        "계산":"計算",
+        "선택":"選擇",
+        "우선 장비":"首先物品",
+        "filter1":"物品選擇",
+        "filter2":"地區選擇",
+        "탑3":"前3名",
+        "게임":"棋局",
+        "게임수":"棋局",
+        "승":"勝",
+        "상위":"上位",
+        "딜량":"傷害",
+        "킬어시":"擊殺幫助",
+        "플레이어":"玩家",
+        "아이템빌드":"物品次序",
+        "팀원":"組員",
+        "전":"戰",
+        "스킬빌드":"技能次序",
+        "죽인플레이어":"死因",
+        "전적갱신":"更新",
+        "최근 업데이트":"最近更新",
+        "최다킬":"最多擊殺",
+        "캐릭터":"性格",
+        "매치정보":"棋局情報",
+        "랭크":"排位",
+        "일반":"一般",
+        "추천아이템":"推薦 物品",
+        "빌드":"次序",
+        "더 보기":"查看更多",
+        "레벨":"等級",
+        "위":"位",
+        "전체":"全體",
+        "종합":"綜合",
+        "티어":"檔次",
+        "우승":"優勝",
+        "점수":"点数",
+        "킬어시 / 딜량":"傷害",
+        "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
+        "question":"卡通層級是以官方統計爲基礎，以卡通人物的勝率、登場率、KA/M、平均排名等爲基礎製作的。",
+        "로딩":"正在搜索戰績。 請稍等。",
+        "없음":"無戶籍信息全無戶籍信息。 請重新確認暱稱後搜索。",
+        "더헌터":{
+        "name": "獵人",
+        "Detail": "獵取野生動物50只以上！ 救救北極熊吧..."
+        },
+        "부쉬그라운드":{
+        "name": "灌木叢絕地 ",
+        "Detail": "僅以1殺獲勝！ 生存者是最強的。"
+        },
+        "루미아트럭":{
+        "name": "貨車司機",
+        "Detail": "這次比賽5殺以上記錄！ 你是魯密島最好的卡車司機。"
+        },
 
     "main": {
         "banner": {
-            "language": "简体中文",
-            "menu": {
+            "language": "簡體中文",
+                "menu": {
                 "rank": "排名",
                 "item": "物品",
-                "map": "地图",
-                "route": "路径",
-                "tier": "性格 / 层级"
+                "map": "地圖",
+                "route": "路徑",
+                "tier": "性格 / 層級"
             },
             "placeholder": "角色搜索."
         },
@@ -116,134 +116,134 @@
     "detail": {
         "duoStat": "二人 害-增幅",
         "squadStat": "三人 害-增幅",
-        "giveDmg": "给害",
+        "giveDmg": "給害",
         "takeDmg": "被害",
         "avg": "平均",
-        "skill_info": "技能资讯",
-        "passive": "被动的",
+        "skill_info": "技能資訊",
+        "passive": "被動的",
         "weaponSkill": "武器技能",
-        "스킬트리" : "推荐 技能次序",
-        "평타" : "基本攻击",
-        "흡혈" : "体能吸收",
+        "스킬트리" : "推薦 技能次序",
+        "평타" : "基本攻擊",
+        "흡혈" : "體能吸收",
         "스킬" : "技能增幅",
         "lv1stat": "LV1 能力值",
         "lv20stat": "LV20 能力值"
     },
     "stat": {
-        "attackPower": "攻击力",
+        "attackPower": "攻擊力",
         "increaseSkillDamage": "技能增幅",
         "increaseSkillDamageRatio": "技能增幅(%)",
-        "attackSpeedRatio": "攻击速度",
-        "lifeSteal": "体能吸收",
+        "attackSpeedRatio": "攻擊速度",
+        "lifeSteal": "體能吸收",
 
-        "criticalStrikeChance": "暴击概率",
-        "criticalStrikeDamage": "暴击伤害量",
+        "criticalStrikeChance": "暴擊概率",
+        "criticalStrikeDamage": "暴擊傷害量",
 
-        "increaseBasicAttackDamage": "基本攻击额外伤害",
-        "decreaseRecoveryToBasicAttack": "基本攻击肘减少治愈",
-        "decreaseRecoveryToSkill": "技能肘减少治愈",
+        "increaseBasicAttackDamage": "基本攻擊額外傷害",
+        "decreaseRecoveryToBasicAttack": "基本攻擊肘減少治癒",
+        "decreaseRecoveryToSkill": "技能肘減少治癒",
 
-        "defense": "防御力",
-        "preventBasicAttackDamaged": "基本攻击伤害减少",
-        "preventSkillDamagedRatio": "技能伤害减少",
+        "defense": "防禦力",
+        "preventBasicAttackDamaged": "基本攻擊傷害減少",
+        "preventSkillDamagedRatio": "技能傷害減少",
         
-        "maxHp": "最大体力",
-        "hpRegen": "体力再生",
-        "hpRegenRatio":  "体力再生(%)",
+        "maxHp": "最大體力",
+        "hpRegen": "體力再生",
+        "hpRegenRatio":  "體力再生(%)",
 
         "maxSp": "最大",
         "spRegen": "耐力再生",
         "spRegenRatio": "耐力再生(%)",
 
-        "sightRange": "视野范围",
-        "moveSpeed":"移动速度",
-        "cooldownReduction":"冷却减少",
-        "attackRange":"基本攻击射程",
-        "outOfCombatMoveSpeed": "非战斗 移动速度"
+        "sightRange": "視野範圍",
+        "moveSpeed":"移動速度",
+        "cooldownReduction":"冷卻減少",
+        "attackRange":"基本攻擊射程",
+        "outOfCombatMoveSpeed": "非戰鬥 移動速度"
     },
 
     "characters": {
         "아야": "阿雅",
-        "피오라": "菲欧娜",
+        "피오라": "菲歐娜",
         "현우": "玄佑",
-        "재키": "杰琪",
-        "매그너스": "马格努斯",
+        "재키": "傑琪",
+        "매그너스": "馬格努斯",
         "나딘": "娜町",
-        "자히르": "扎希尔",
+        "자히르": "扎希爾",
         "하트": "哈特",
         "아이솔": "埃索",
         "리 다이린": "利黛琳",
         "유키": "雪",
         "혜진": "慧珍",
-        "쇼우": "修凯",
+        "쇼우": "修凱",
         "시셀라": "希瑟拉",
-        "키아라": "奇娅拉",
+        "키아라": "奇婭拉",
         "아드리아나": "阿德瑞娜",
         "쇼이치": "彰一",
-        "실비아": "西尔维娅",
-        "엠마": "艾玛"
+        "실비아": "西爾維婭",
+        "엠마": "艾瑪"
     },
     "weapons": {
-        "투척": "投掷", 
-        "권총": "手枪", 
-        "돌격소총": "冲锋枪", 
-        "저격총": "狙击枪", 
-        "레이피어": "双刃剑", 
-        "창": "枪", 
-        "양손검": "双手剑", 
+        "투척": "投擲", 
+        "권총": "手槍", 
+        "돌격소총": "衝鋒槍", 
+        "저격총": "狙擊槍", 
+        "레이피어": "雙刃劍", 
+        "창": "槍", 
+        "양손검": "雙手劍", 
         "기타": "吉他", 
         "활": "弓", 
         "암기": "暗器", 
         "톤파": "旋棍", 
         "글러브": "皮手套", 
         "도끼": "斧子", 
-        "쌍검": "双剑", 
-        "단검": "单手剑", 
-        "쌍절곤": "双节棍", 
+        "쌍검": "雙劍", 
+        "단검": "單手劍", 
+        "쌍절곤": "雙節棍", 
         "배트": "棒", 
-        "망치": "铁锤", 
-        "석궁": "弩"        
+        "망치": "鐵錘", 
+        "석궁": "弩"
     },
     "armor": {
         "무기":"武器",
         "옷": "胸部",
-        "머리":"头部",
+        "머리":"頭部",
         "팔": "手臂",
         "다리": "腿部",
-        "장식": "装饰"
+        "장식": "裝飾"
     },
-    "Archery": "靶场",
+    "Archery": "靶場",
     "Alley": "小巷",
     "Avenue": "大街",
-    "Temple": "寺刹",
-    "School": "学校",
-    "Hotel": "旅馆",
+    "Temple": "寺剎",
+    "School": "學校",
+    "Hotel": "旅館",
     "Pond": "池塘",
     "Research": "研究所",
-    "Beach": "海滩",
+    "Beach": "海灘",
     "Forest": "森林",
-    "Cemetery": "墓园",
-    "Hospital": "医院",
-    "Uptown": "高级住宅区",
+    "Cemetery": "墓園",
+    "Hospital": "醫院",
+    "Uptown": "高級住宅區",
     "Chapel": "教堂",
-    "Factory": "工厂",
-    "Dock": "码头",
+    "Factory": "工廠",
+    "Dock": "碼頭",
     
     "badge": {
-        "승1":"25胜!",
-        "승2":"50胜!",
-        "승3":"100胜!",
-        "승4":"250胜!",
-        "승5":"500胜!",
-        "승6":"1000胜!",
-        "승7":"3000胜!",
-        "킬1":"500击杀!",
-        "킬2":"1000击杀!",
-        "킬3":"2000击杀!",
-        "킬4":"5000击杀!",
-        "킬5":"10000击杀!",
-        "킬6":"20000击杀!",
-        "킬7":"50000击杀!",
+        "승1":"25勝!",
+        "승2":"50勝!",
+        "승3":"100勝!",
+        "승4":"250勝!",
+        "승5":"500勝!",
+        "승6":"1000勝!",
+        "승7":"3000勝!",
+        "킬1":"500擊殺!",
+        "킬2":"1000擊殺!",
+        "킬3":"2000擊殺!",
+        "킬4":"5000擊殺!",
+        "킬5":"10000擊殺!",
+        "킬6":"20000擊殺!",
+        "킬7":"50000擊殺!",
         "탑1":"75前3名!",
         "탑2":"150前3名!",
         "탑3":"300前3名!",
@@ -251,175 +251,175 @@
         "탑5":"1500前3名!",
         "탑6":"3000前3名!",
         "탑7":"10000前3名!",
-        "판1":"200比赛!",
-        "판2":"400比赛!",
-        "판3":"800比赛!",
-        "판4":"2000比赛!",
-        "판5":"4000比赛!",
-        "판6":"8000比赛!",
-        "판7":"25000比赛!"
+        "판1":"200比賽!",
+        "판2":"400比賽!",
+        "판3":"800比賽!",
+        "판4":"2000比賽!",
+        "판5":"4000比賽!",
+        "판6":"8000比賽!",
+        "판7":"25000比賽!"
     },
     
     "items":{
-        "일렉트론블라스터": "电子光束枪",
-        "마탄의사수": "魔弹射手",
-        "매그넘-보아": "马格农-慱亚",
-        "악켈테": "凯尔特",
-        "엘레강스": "优雅者之枪",
+        "일렉트론블라스터": "電子光束槍",
+        "마탄의사수": "魔彈射手",
+        "매그넘-보아": "馬格農-慱亞",
+        "악켈테": "凱爾特",
+        "엘레강스": "優雅者之槍",
         "단영촌천투": "寸拳",
-        "디바인피스트": "圣拳",
+        "디바인피스트": "聖拳",
         "브레이질건틀릿": "巴西拳套",
         "블러드윙너클": "血翼指虎",
         "빙화현옥수": "霜瓣玉手",
         "소수": "赤手空拳",
-        "여래수투": "如来种掌",
-        "천잠장갑": "天蚕手套",
-        "더월": "红砖",
-        "보헤미안": "波希米亚",
-        "새티스팩션": "乐事",
-        "원더풀투나잇": "绝色之夜",
-        "천국의계단": "天国的阶梯",
+        "여래수투": "如來種掌",
+        "천잠장갑": "天蠶手套",
+        "더월": "紅磚",
+        "보헤미안": "波希米亞",
+        "새티스팩션": "樂事",
+        "원더풀투나잇": "絕色之夜",
+        "천국의계단": "天國的階梯",
         "틴스피릿": "少年魂",
-        "퍼플헤이즈": "柴色团雾",
+        "퍼플헤이즈": "柴色團霧",
         "초진동나이프": "共振匕首",
-        "카른웬난": "亚瑟王的短剑",
-        "파산검": "破山剑",
+        "카른웬난": "亞瑟王的短劍",
+        "파산검": "破山劍",
         "프라가라흐": "佛拉格拉克",
         "빔엑스": "激光刃斧",
-        "산타무에르떼": "死亡圣神之镰",
-        "스퀴테": "大镰刀",
-        "파라슈": "罗犘斧",
-        "하르페": "赫帕尔",
+        "산타무에르떼": "死亡聖神之鐮",
+        "스퀴테": "大鐮刀",
+        "파라슈": "羅犘斧",
+        "하르페": "赫帕爾",
         "AK-12": "AK-12",
         "XCR": "XCR",
-        "개틀링건": "加特林机枪",
-        "기관총": "经机枪",
-        "듀랜달Mk2": "杜伦德尔 mk2",
+        "개틀링건": "加特林機槍",
+        "기관총": "經機槍",
+        "듀랜달Mk2": "杜倫德爾 mk2",
         "미스틸테인": "米斯特汀",
-        "볼틱레토": "带电短刀",
-        "유성검": "陨星重剑",
+        "볼틱레토": "帶電短刀",
+        "유성검": "隕星重劍",
         "주와이외즈": "咎瓦尤斯",
-        "활빈검": "正义之剑",
-        "개밥바라기": "夜柛星锤",
+        "활빈검": "正義之劍",
+        "개밥바라기": "夜柛星錘",
         "낭아봉": "狼牙棒",
-        "다그다의망치": "达格达的大釜",
+        "다그다의망치": "達格達的大釜",
         "마법봉": "魔法棒",
-        "토르의망치": "雷神之锤",
+        "토르의망치": "雷神之錘",
         "구원의여신상": "救世女神像",
-        "스파이의우산": "特工伞",
+        "스파이의우산": "特工傘",
         "여의봉": "如意金箍棒",
         "타구봉": "打狗棒",
-        "대황": "大将灵魂",
-        "발리스타": "诸葛连弩",
-        "샤릉가": "沙兰加",
-        "영광금귀신기노": "灵光金龟神机弩",
-        "저격크로스보우": "狙击弩",
-        "디오스쿠로이": "狄奧斯库洛伊",
-        "로이거 차르": "罗伊格尔 & 扎尔",
+        "대황": "大將靈魂",
+        "발리스타": "諸葛連弩",
+        "샤릉가": "沙蘭加",
+        "영광금귀신기노": "靈光金龜神機弩",
+        "저격크로스보우": "狙擊弩",
+        "디오스쿠로이": "狄奧斯庫洛伊",
+        "로이거 차르": "羅伊格爾 & 扎爾",
         "이천일류": "二天一流",
-        "자웅일대검": "雌雄双股剑",
-        "대소반룡곤": "大小盘龙棍",
-        "초진동눈차크": "超级震动双节棍",
-        "건곤권": "风火轮",
-        "만천화우": "满天花雨",
-        "미치광이왕의카드": "病子国王的卡片",
-        "빙백은침": "冰魄银针",
+        "자웅일대검": "雌雄雙股劍",
+        "대소반룡곤": "大小盤龍棍",
+        "초진동눈차크": "超級震動雙節棍",
+        "건곤권": "風火輪",
+        "만천화우": "滿天花雨",
+        "미치광이왕의카드": "病子國王的卡片",
+        "빙백은침": "冰魄銀針",
         "생사부": "亡者之符",
-        "수다르사나": "妙见神轮",
-        "옥전결": "翡翠秘符",
-        "푸른색단도": "蔚蓝匕首",
-        "풍마수리검": "风魔手里剑",
-        "플레솃": "飞镖弹",
-        "다인슬라이프": "噬血魔剑",
-        "뚜언띠엔": "順天剑",
-        "레바테인": "破灭之枝",
-        "모노호시자오": "晒衣杆",
+        "수다르사나": "妙見神輪",
+        "옥전결": "翡翠祕符",
+        "푸른색단도": "蔚藍匕首",
+        "풍마수리검": "風魔手裏劍",
+        "플레솃": "飛鏢彈",
+        "다인슬라이프": "噬血魔劍",
+        "뚜언띠엔": "順天劍",
+        "레바테인": "破滅之枝",
+        "모노호시자오": "曬衣杆",
         "아론다이트": "阿隆戴特",
-        "엑스칼리버": "断钢圣剑",
-        "플라즈마소드": "等离子剑",
-        "호푸어드": "天卫之剑",
+        "엑스칼리버": "斷鋼聖劍",
+        "플라즈마소드": "等離子劍",
+        "호푸어드": "天衛之劍",
         "NTW-20": "NTW-20",
         "Tac-50": "Tac-50",
         "사사성광": "四射星光",
-        "폴라리스": "北极星",
+        "폴라리스": "北極星",
         "인터벤션": "夜行",
-        "롱기누스의창": "朗基努斯之枪",
-        "방천화극": "方天画戟",
-        "애각창": "涯角枪",
+        "롱기누스의창": "朗基努斯之槍",
+        "방천화극": "方天畫戟",
+        "애각창": "涯角槍",
         "장팔사모": "丈八蛇矛",
-        "청룡언월도": "青龙偃月刀",
-        "코스믹바이던트": "宇宙双叉戟",
-        "트리아이나": "波塞冬之枪",
-        "화첨창": "火尖枪",
+        "청룡언월도": "青龍偃月刀",
+        "코스믹바이던트": "宇宙雙叉戟",
+        "트리아이나": "波塞冬之槍",
+        "화첨창": "火尖槍",
         "마이쏙": "秦式拳法",
-        "택티컬톤파": "战术旋棍",
-        "플라즈마톤파": "等离旋棍",
-        "고폭수류탄": "高爆手榴弹",
-        "다비드슬링": "大卫的弹弓",
-        "루테늄구슬": "钌珠",
-        "소이탄": "燃烧弹",
-        "안티오크의수류탄": "安提奥克的手榴弹",
-        "연막탄": "烟雰弹",
-        "골든래쇼보우": "黄金比例弓",
-        "엘리멘탈보우": "元素灵弓",
-        "트윈보우": "双子杀",
+        "택티컬톤파": "戰術旋棍",
+        "플라즈마톤파": "等離旋棍",
+        "고폭수류탄": "高爆手榴彈",
+        "다비드슬링": "大衛的彈弓",
+        "루테늄구슬": "釕珠",
+        "소이탄": "燃燒彈",
+        "안티오크의수류탄": "安提奧克的手榴彈",
+        "연막탄": "煙雰彈",
+        "골든래쇼보우": "黃金比例弓",
+        "엘리멘탈보우": "元素靈弓",
+        "트윈보우": "雙子殺",
         "페일노트": "血之刻印",
         "편전": "片箭",
         "경량화부츠": "羽靴",
-        "글레이셜슈즈": "万年冰鞋",
-        "매버릭러너": "马弗里克之履",
-        "미스릴부츠": "秘珢靴",
-        "부케팔로스": "布西发拉斯",
-        "분홍신": "红鞋",
+        "글레이셜슈즈": "萬年冰鞋",
+        "매버릭러너": "馬弗裏克之履",
+        "미스릴부츠": "祕珢靴",
+        "부케팔로스": "布西發拉斯",
+        "분홍신": "紅鞋",
         "클링온부츠": "白犀牛靴子",
-        "풍화륜": "凤火轮",
-        "헤르메스의부츠": "赫尔墨斯之靴",
+        "풍화륜": "鳳火輪",
+        "헤르메스의부츠": "赫爾墨斯之靴",
         "EOD부츠": "EOD 防爆靴",
-        "기사단장의투구": "方旗骑士盔",
-        "미스릴투구": "秘锟头盔",
-        "변검": "脸谱",
+        "기사단장의투구": "方旗騎士盔",
+        "미스릴투구": "祕錕頭盔",
+        "변검": "臉譜",
         "수정티아라": "水晶冠",
-        "오토바이헬멧": "摩托车头盔",
+        "오토바이헬멧": "摩托車頭盔",
         "월계관": "月桂冠",
-        "전술OPS헬멧": "OPS 战术头盔",
-        "제국왕관": "帝国皇冠",
-        "황실부르고넷": "帝国战盔",
+        "전술OPS헬멧": "OPS 戰術頭盔",
+        "제국왕관": "帝國皇冠",
+        "황실부르고넷": "帝國戰盔",
         "EOD수트": "EOD 防爆服",
-        "광학미채수트": "光学迷彩服",
-        "락커의자켓": "摇滚乐手来克",
-        "미스릴갑옷": "秘银链甲",
-        "배틀수트": "骑士战甲",
-        "불꽃드레스": "星火洋装",
-        "석양의갑옷": "余晖之铠",
-        "성기사의갑옷": "十字军重甲",
-        "아마조네스아머": "亚马逊战甲",
+        "광학미채수트": "光學迷彩服",
+        "락커의자켓": "搖滾樂手來克",
+        "미스릴갑옷": "祕銀鍊甲",
+        "배틀수트": "騎士戰甲",
+        "불꽃드레스": "星火洋裝",
+        "석양의갑옷": "餘暉之鎧",
+        "성기사의갑옷": "十字軍重甲",
+        "아마조네스아머": "亞馬遜戰甲",
         "어사의": "御史衣",
-        "용의도복": "龙之道服",
-        "지휘관의갑옷": "指挥官战甲",
+        "용의도복": "龍之道服",
+        "지휘관의갑옷": "指揮官戰甲",
         "집사복": "管家服",
-        "카바나": "日轮之铠",
-        "퀸오브하트": "红心女王",
-        "궁기병의화살통": "骑兵箭筒",
-        "달빛펜던트": "皎月吊坠",
-        "만년빙": "极冰",
+        "카바나": "日輪之鎧",
+        "퀸오브하트": "紅心女王",
+        "궁기병의화살통": "騎兵箭筒",
+        "달빛펜던트": "皎月吊墜",
+        "만년빙": "極冰",
         "백우선": "白羽扇",
         "삼매진화": "三昧真火",
-        "슈뢰딩거의상자": "薛定谔的猫箱",
+        "슈뢰딩거의상자": "薛定諤的貓箱",
         "에메랄드타블렛": "翡翠石板",
-        "우치와": "团扇",
+        "우치와": "團扇",
         "진리는나의빛": "真我之光",
-        "탄창": "弹夹",
-        "먼지털이개": "鸡毛掸子",
-        "기사의신조": "骑士信条",
-        "드라우프니르": "德罗普尼尔",
-        "레이더": "雷达",
-        "미스릴방패": "秘银盾",
-        "바이탈센서": "生命讯号感測器",
-        "샤자한의검집": "沙.贾汗之剑",
-        "소드스토퍼": "阻刃护臂",
+        "탄창": "彈夾",
+        "먼지털이개": "雞毛撣子",
+        "기사의신조": "騎士信條",
+        "드라우프니르": "德羅普尼爾",
+        "레이더": "雷達",
+        "미스릴방패": "祕銀盾",
+        "바이탈센서": "生命訊號感測器",
+        "샤자한의검집": "沙.賈汗之劍",
+        "소드스토퍼": "阻刃護臂",
         "스카디의팔찌": "斯嘉蒂的手鐲",
-        "오토암즈": "自动臂",
-        "큐브워치": "召晚手表",
+        "오토암즈": "自動臂",
+        "큐브워치": "召晚手錶",
         "군용나이프": "Army Knife",
         "장미칼": "Rose Knife",
         "샴쉬르": "Shamshir",
