언노운 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -71,6 +71,7 @@
     "우승":"優勝",
     "점수":"点数",
     "킬어시 / 딜량":"ダメージ量",
+    "정보없음":"情報 無",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
     "로딩":"戦績を検索中です。 少々お待ちください",
