--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -68,6 +68,7 @@
     "위":"위",
     "종합":"종합",
     "킬어시 / 딜량":"킬어시 / 딜량",
+    "정보없음":"정보 없음",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, KA/M, 평균순위 등을 바탕으로 만들어집니다.",
     "로딩":"전적을 검색 중 입니다. 잠시만 기다려 주세요.",
