--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -71,6 +71,7 @@
     "우승":"优胜",
     "점수":"点数",
     "킬어시 / 딜량":"伤害",
+    "정보없음":"信息 无",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
     "로딩":"正在搜索战绩。 请稍等。",
