--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -71,6 +71,7 @@
         "우승":"優勝",
         "점수":"点数",
         "킬어시 / 딜량":"傷害",
+        "정보없음":"信息 無",
         "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
         "question":"卡通層級是以官方統計爲基礎，以卡通人物的勝率、登場率、KA/M、平均排名等爲基礎製作的。",
         "로딩":"正在搜索戰績。 請稍等。",
