--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -71,6 +71,7 @@
     "우승":"Wins",
     "점수":"LP",
     "킬어시 / 딜량":"KA / DMG",
+    "정보없음":"Uknown",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\n Eternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\n Data Based on Nimble Neuron",
     "question":"Character tier is made based on the winning rate, pick rate, KA/M, and average ranking of characters based on official statistics.",
     "로딩":"Searching match history. Please wait a moment.",
